force-app/main/default/objects/WhatsApp_Media_Event__e/fields/Customer_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone_Number__c</fullName>
    <label>Customer Phone Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>