force-app/main/default/objects/WhatsApp_Media_Event__e/fields/MediaId__c.field-meta.xml
<CustomField>
    <fullName>MediaId__c</fullName>
    <label>MediaId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>